@startuml

title __APPETIZER's Class Diagram__\n

  namespace Appetizer {
    abstract class Appetizer.AppetizerDecorator {
        {abstract} + getDescription()
    }
  }
  

  namespace Appetizer {
    class Appetizer.FrenchFry {
        + FrenchFry()
        + getCost()
        + getDescription()
    }
  }
  

  namespace Appetizer {
    class Appetizer.OnionRing {
        + OnionRing()
        + getCost()
        + getDescription()
    }
  }
  

  Appetizer.AppetizerDecorator -up-|> Pizza.Pizza
  Appetizer.FrenchFry -up-|> Appetizer.AppetizerDecorator
  Appetizer.FrenchFry o-- Pizza.Pizza : pizza
  Appetizer.OnionRing -up-|> Appetizer.AppetizerDecorator
  Appetizer.OnionRing o-- Pizza.Pizza : pizza


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
